[package]
name = "solana-fastwebsocket-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
fastwebsockets = { version = "0.10", features = ["upgrade"] }
http-body-util = "0.1.2"
hyper = "1.6.0"
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.1"
webpki-roots = "0.26.8"
